# game_of_life

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  coursework.md  main.cpp  mpi_openmp.py  run_ranks.py  slurm_submit.sh  slurm_submit_mpiranks.sh  slurm_submit_mpivsopenmp.sh
cmake/: ClangFormat.cmake  ClangTidy.cmake  Doxygen.cmake
graphs/: cache_blocking.ipynb  cache_blocking_time.txt  execution_times_10000.txt  execution_times_20000.txt  execution_times_5000.txt  mpi_openmp_tradeoff_execution_times.txt  plot_graphs.py
grids/: final_grid.txt  glider_5x5.txt  glider_81x81.txt  oscillator.txt
src/: CMakeLists.txt  grid.cpp  grid_utils.cpp  main.cpp
src/include/: grid.h  grid_utils.h
src/timing/: CMakeLists.txt  timing.cpp
src/timing/include/: timing.h
test/: CMakeLists.txt  test_grid.cpp
